--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -125,3 +125,27 @@
         }
     }
 }
+
+.home-services{
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    .service-top{
+        .sub-title {
+            margin-bottom: 15px;
+            max-width: max-content;
+            color: $secondary-color;
+            font-family: $font-family;
+        }
+    
+        .title {
+            color: $primary;
+            margin: auto;
+            max-width: max-content;
+            margin-bottom: 25px;
+        }
+        p{
+            font-size: 18px;
+        }
+    }
+}
