--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -27,11 +27,12 @@
 .home-business-setup {
     padding-top: 100px;
     padding-bottom: 100px;
+
     .sub-title {
         margin: auto;
         margin-bottom: 15px;
         max-width: max-content;
-        color: $secondary-color;
+        color: $fourth-color;
         font-family: $font-family;
     }
 
@@ -49,7 +50,8 @@
         text-align: center;
         font-weight: 500;
     }
-    .business-card-wrap{
+
+    .business-card-wrap {
         margin-top: 50px;
     }
 
@@ -76,7 +78,7 @@
         }
 
         &-front,
-        &-back{
+        &-back {
             position: absolute;
             width: 100%;
             height: 100%;
@@ -96,28 +98,33 @@
             transform: rotateY(180deg);
             color: #fff;
             text-align: left;
-            .title{
+
+            .title {
                 color: #fff;
                 margin: 0;
                 margin-bottom: 5px;
                 font-size: 25px;
                 font-family: $font-family;
-                
+
             }
-            p{
+
+            p {
                 margin: 0;
                 font-size: 14px;
                 color: #fff;
                 text-align: left;
             }
-            ul{
+
+            ul {
                 list-style-type: none;
                 text-align: left;
                 margin-top: 30px;
                 padding: 0;
-                li{
+
+                li {
                     font-size: 16px;
-                    &+li{
+
+                    &+li {
                         margin-top: 15px;
                     }
                 }
@@ -126,18 +133,161 @@
     }
 }
 
-.home-services{
+.home-services {
     padding-top: 100px;
     padding-bottom: 100px;
 
-    .service-top{
+    .service-top {
         .sub-title {
             margin-bottom: 15px;
             max-width: max-content;
-            color: $secondary-color;
+            color: $fourth-color;
             font-family: $font-family;
         }
-    
+
+        .title {
+            color: $primary;
+            margin: auto;
+            max-width: max-content;
+            margin-bottom: 25px;
+        }
+
+        p {
+            font-size: 20px;
+            // padding-top: 20px;
+            margin-bottom: 30px;
+        }
+    }
+
+    .service-list {
+        margin-top: 70px;
+
+        .card {
+            padding: 0 50px 30px 0;
+            display: flex;
+            width: 100%;
+            flex-direction: row;
+            border: none;
+
+            .icon {
+                width: 90px;
+                flex: 0 0 90px;
+                height: 90px;
+                background-color: rgba(8, 106, 216, 0.07);
+                border-radius: 100%;
+            }
+
+            .info {
+                padding-left: 30px;
+
+                .title {
+                    font-size: 22px;
+                    margin-bottom: 15px;
+                }
+            }
+
+        }
+    }
+}
+
+.home-about {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #ecf6fa;
+    .achivement {
+        position: relative;
+        z-index: 1;
+        text-align: center;
+        height: 450px;
+        width: 450px;
+        margin-left: 35px;
+        margin-top: 15px;
+
+        li {
+            display: inline-block;
+            background: #ecf6fa;
+            padding: 16px 0;
+            min-width: 180px;
+
+            &:first-child {
+                text-align: center;
+                position: relative;
+                top: -40px;
+                .fun-fact{
+                    text-align: center;
+                    .counter{
+                        display: flex;
+                        justify-content: center;
+                        font-size: 50px;
+                        font-weight: 700;
+                        color: $primary;
+                        line-height: 1.2;
+                       
+                    }
+                }
+            }
+
+            &:nth-child(2) {
+                position: absolute;
+                left: -60px;
+                bottom: 80px;
+                .fun-fact{
+                    text-align: center;
+                    .counter{
+                        display: flex;
+                        justify-content: center;
+                        font-size: 50px;
+                        font-weight: 700;
+                        color: $secondary-color;
+                        line-height: 1.2;
+                       
+                    }
+                }
+            }
+
+            &:last-child {
+                position: absolute;
+                right: -60px;
+                bottom: 80px;
+                .fun-fact{
+                    text-align: center;
+                    .counter{
+                        display: flex;
+                        justify-content: center;
+                        font-size: 50px;
+                        font-weight: 700;
+                        line-height: 1.2;
+                        color: $third-color;
+                       
+                    }
+                }
+
+            }
+          
+        }
+
+        &::after {
+            position: absolute;
+            height: 450px;
+            width: 450px;
+            content: "";
+            border: 2px dashed #cccccc;
+            left: 0;
+            top: 0;
+            border-radius: 50%;
+            z-index: -1;
+            animation: rotate-animation 30s infinite linear;
+
+        }
+    }
+    .content{
+        .sub-title {
+            margin-bottom: 15px;
+            max-width: max-content;
+            color: $fourth-color;
+            font-family: $font-family;
+        }
+
         .title {
             color: $primary;
             margin: auto;
@@ -147,5 +297,51 @@
         p{
             font-size: 18px;
         }
+        ul{
+            margin: 0;
+            list-style-type: none;
+            padding: 0;
+            li{
+                position: relative;
+                padding-left: 20px;
+                font-size: 18px;
+                &::before{
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    content: "\4e";
+                    font-family: 'ElegantIcons';
+                    text-align: center;
+                    border-radius: 50%;
+                    font-weight: 700;
+                    color: $fourth-color;
+                }
+                &+li{
+                    margin-top: 15px;
+                }
+            }
+        }
+        .experince{
+            font-size: 80px;
+            line-height: 1.2;
+            span{
+                font-size: 18px;
+                display: block;
+                font-weight: 400;
+                font-family: $font-family;
+            }
+        }
+    }
+}
+
+@keyframes rotate-animation{
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
     }
 }
