--- a/assets/scss/utilities/_buttons.scss
+++ b/assets/scss/utilities/_buttons.scss
@@ -3,6 +3,7 @@
     align-items: center;
     position: relative;
     font-weight: 500!important;
+    font-size: 18px;
 }
 
 
@@ -56,7 +57,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    padding: 14px 0;
+    padding: 12px 0;
     margin: 0 0 0 70px;
     line-height: 1.8;
     text-transform: uppercase;
@@ -65,7 +66,7 @@
 }
 
 .cta-btn {
-    max-width: 280px;
+    max-width: 300px;
     height: auto;
     padding: 0!important;
 
@@ -82,4 +83,39 @@
             color: #fff;
         }
     }
+}
+
+.btn-primary{
+  background-color: $secondary-color!important;
+  border: none;
+  height: 55px;
+  border-radius: 2rem;
+  max-width: max-content;
+  padding: 25px 40px;
+  .arrow{
+    display: inline-block;
+    position: relative;
+   margin-left: 25px;
+   transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+
+    &::before {
+        position: absolute;
+        content: "";
+        top: -0.4rem;
+        right: 0.0625rem;
+        width: 0.625rem;
+        height: 0.625rem;
+        border-top: 0.2rem solid #fff;
+        border-right: 0.2rem solid #fff;
+        transform: rotate(45deg);
+        transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+
+    }
+  }
+  &:hover{
+    .arrow {
+        background: #fff;
+        transform: translate(8px, 0);
+    }
+  }
 }
