--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -131,7 +131,6 @@
 }
 .home-services .service-top .title {
   color: #013346;
-  margin: auto;
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
@@ -210,7 +209,7 @@
           justify-content: center;
   font-size: 50px;
   font-weight: 700;
-  color: #013346;
+  color: #EB2227;
   line-height: 1.2;
 }
 .home-about .achivement li:nth-child(2) {
@@ -276,7 +275,6 @@
 }
 .home-about .content .title {
   color: #013346;
-  margin: auto;
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
@@ -348,4 +346,58 @@
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
+}
+.home-contact-faq {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.home-contact-faq .contact {
+  padding-right: 20px;
+}
+.home-contact-faq .contact .title {
+  color: #013346;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin-bottom: 25px;
+}
+.home-contact-faq .contact p {
+  font-size: 18px;
+  margin-bottom: 0;
+}
+.home-contact-faq .contact ul {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0;
+  list-style-type: none;
+  margin: 30px 0 50px 0;
+  row-gap: 20px;
+  max-width: 80%;
+}
+.home-contact-faq .contact ul li {
+  width: 50%;
+}
+.home-contact-faq .faq .accordion-item {
+  border: none !important;
+  margin-bottom: 15px;
+}
+.home-contact-faq .faq .accordion-header {
+  border: none !important;
+}
+.home-contact-faq .faq .accordion-button {
+  background-color: transparent;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 10px #cccccc;
+          box-shadow: 0 0 10px #cccccc;
+  margin-bottom: 0;
+}
+.home-contact-faq .faq .accordion-body {
+  padding: 15px 0 25px 0;
 }
