--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -147,7 +147,6 @@
 
         .title {
             color: $primary;
-            margin: auto;
             max-width: max-content;
             margin-bottom: 25px;
         }
@@ -220,7 +219,7 @@
                         justify-content: center;
                         font-size: 50px;
                         font-weight: 700;
-                        color: $primary;
+                        color: $fourth-color;
                         line-height: 1.2;
                        
                     }
@@ -290,7 +289,6 @@
 
         .title {
             color: $primary;
-            margin: auto;
             max-width: max-content;
             margin-bottom: 25px;
         }
@@ -343,5 +341,61 @@
     }
     100%{
         transform: rotate(360deg);
+    }
+}
+
+.home-contact-faq{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    .contact{
+        padding-right: 20px;
+        .title {
+            color: $primary;
+            max-width: max-content;
+            margin-bottom: 25px;
+        }
+        p{
+            font-size: 18px;
+            margin-bottom: 0;
+        }
+        ul{
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0;
+            list-style-type: none;
+            margin: 30px 0 50px 0;
+            row-gap: 20px;
+            max-width: 80%;
+            li{
+                width: 50%;
+            }
+        }
+    }
+
+    .faq{
+        .accordion{
+            &-item{
+              border: none!important;
+              margin-bottom: 15px;
+            }
+            &-header{
+               border: none!important;
+            }
+            &-button{
+               background-color: transparent;
+               border: none;
+               box-shadow: none;
+               border-radius: 5px;
+               box-shadow: 0 0 10px #cccccc;
+               margin-bottom: 0;
+            }
+            &-collapse{
+
+            }
+            &-body{
+              padding: 15px 0 25px 0;
+            }
+        }
     }
 }
