--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,47 +1,34 @@
 @import '../utilities/variable';
 @import '../mixins/mixins';
 
-.footer{
+.footer {
     background-color: $primary;
     position: relative;
     z-index: 2;
-    padding-top: 100px;
+    padding-top: 50px;
     overflow: hidden;
-    &-about{
-        &-title{
+
+    @include min(992) {
+        padding-top: 100px;
+    }
+
+    &-about {
+        margin-bottom: 30px;
+
+        @include min(992) {
+            margin-bottom: 0;
+        }
+
+        &-title {
             color: #fff;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             position: relative;
             font-size: 20px;
-            &::before{
-                position: absolute;
-                content: "";
-                left: -16px;
-                top: -10px;
-                width: 45px;
-                height: 45px;
-                border-radius: 100%;
-                background-color: #ffffff;
-                opacity: .1;
-            }
-        }
-        p{
-            color: #fff;
-        }
-    }
-    &-menu{
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        padding-left: 70px;
-        padding-inline-end: 60px;
-        .menu-items{
-            .menu-title{
-                color: #fff;
-                position: relative;
+
+            @include min(992) {
                 margin-bottom: 30px;
-                font-size: 20px;
-                &::before{
+
+                &::before {
                     position: absolute;
                     content: "";
                     left: -16px;
@@ -53,96 +40,273 @@
                     opacity: .1;
                 }
             }
-            ul{
+        }
+
+        p {
+            color: #fff;
+        }
+        .smform{
+            display: block;
+            margin-bottom: 40px;
+            @include min(992){
                 display: none;
+            }
+            
+        }
+    }
+
+    &-menu {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        @include min(992) {
+            padding-left: 70px;
+            padding-right: 60px;
+        }
+
+        .menu-items {
+            width: 100%;
+
+            @include min(992) {
+                max-width: max-content;
+            }
+
+            .menu-title {
+                color: #fff;
+                position: relative;
+                margin-bottom: 0;
+                padding: 20px 0;
+                font-size: 20px;
+                position: relative;
+              
+
+                @include min(992) {
+                    padding: 0;
+
+                    &::before {
+                        position: absolute;
+                        content: "";
+                        left: -16px;
+                        top: -10px;
+                        width: 45px;
+                        height: 45px;
+                        border-radius: 100%;
+                        background-color: #ffffff;
+                        opacity: .1;
+                    }
+                }
+              
+            }
+            &.opener{
+                .menu-title{
+                    @include max(991){
+                        &::before {
+                            background-color: #fff;
+                            content: "";
+                            height: 16px;
+                            position: absolute;
+                            right: 7px;
+                            top: 15px;
+                            transform: rotate(-90deg);
+                            transition: .3s ease-in-out;
+                            width: 1.5px;
+                        }
+                        &::after {
+                            background-color: #fff;
+                            content: "";
+                            height: 1.5px;
+                            position: absolute;
+                            right: 0px;
+                            top: 22px;
+                            transform: rotate(-90deg);
+                            transition: .3s ease-in-out;
+                            width: 16px;
+                        }
+                    }
+                   
+                }
+            }
+            &.open{
+                .menu-title{
+                    @include max(991){
+
+                        &::before{
+                            transform: rotate(90deg);
+                           opacity: 0;
+                        }
+                        &::after{
+                           transform: rotate(0);
+                        }
+                    }
+                }
+            }
+
+            ul {
                 list-style-type: none;
                 padding: 0;
                 margin: 0;
-                li{
-                    a{
+                // padding-top: 15px;
+                transition: height .3s ease-in-out;
+
+                @include min(992) {
+                    padding-top: 30px;
+                }
+
+                li {
+                    a {
                         color: #fff;
                         text-decoration: none;
                         transition: all .3s ease-in-out;
-                        &:hover{
+
+                        &:hover {
+                            color: $secondary-color;
+                        }
+                        &.active{
                             color: $secondary-color;
                         }
                     }
-                    &+li{
+
+                    &+li {
                         margin-top: 20px;
                     }
-                    strong{
+
+                    strong {
                         text-transform: uppercase;
                         display: block;
                         margin-bottom: 10px;
                         color: #fff;
                         font-weight: 600;
+                        opacity: .8;
                     }
-                    span{
+
+                    span {
                         font-size: 16px;
                         color: #fff;
                     }
                 }
-                @include min(992){
+
+                @include min(992) {
+                    display: block;
+                }
+
+            }
+            .toggle {
+                @include max(991){
+
+                    max-height: 0;
+                    overflow: hidden  
+                }
+            }
+
+           &.open{
+            .toggle {
+                @include max(991){
+                    max-height: max-content;
+                    transition: max-height 0.3s ease;
+                    padding-bottom: 15px;
+                }
+            }
+           }
+
+            &.active {
+                ul {
                     display: block;
                 }
             }
-            &.active{
-                ul{
-                    display: block;
-                }
+
+            &+.menu-items {
+                // margin-top: 30px;
             }
         }
     }
-    &-bottom{
-        margin-top: 80px;
+
+    &-bottom {
+        margin-top: 40px;
         padding: 20px 0;
         border-top: 1px solid rgba($color: #fff, $alpha: .1);
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        p{
+        justify-content: center;
+        @include min(992){
+            margin-top: 80px;
+            justify-content: space-between;
+        }
+
+        p {
             margin-bottom: 0;
             color: #fff;
             font-size: 14px;
         }
-        .footer-logo{
+
+        .footer-logo {
             margin-bottom: 0;
             max-width: 80px;
             height: 50px;
-            img{
+            display: none;
+            @include min(992){
+                display: block;
+            }
+
+            img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
             }
         }
 
-        .form{
-            display: flex;
-            border: 1px solid rgba($color: #fff, $alpha: .2);
-            padding: 5px;
-            .form-control{
-                background-color: transparent;
-                border: none;
-                box-shadow: none;
-                height: 45px;
+        
+    }
+    .form {
+        display: flex;
+        border: 1px solid rgba($color: #fff, $alpha: .2);
+        padding: 5px;
+        @include min(576){
+            max-width: 450px;
+        }
+
+        .form-control {
+            background-color: transparent;
+            border: none;
+            box-shadow: none;
+            height: 45px;
+            color: #fff;
+            &::placeholder{
                 color: #fff;
+                opacity: .5;
             }
-            .submit{
-                width: 60px;
+        }
+
+        .submit {
+            width: 60px;
+            background-color: transparent;
+            border: none;
+            box-shadow: none;
+            outline: none;
+            img{
+                transform: rotate(-90deg);
             }
         }
     }
-    &::after{
+    .dk-form{
+        display: none;
+        @include min(992){
+            display: flex;
+        }
+    }
+
+    &::after {
         left: -30%;
-    top: 0;
-    content: "";
-    position: absolute;
-    height: 600px;
-    width: 1000px;
-    background: linear-gradient(62.5deg, transparent, rgba(74, 196, 243, 0.06));
-    border-radius: 50px;
-    transform: rotate(45deg);
-    z-index: -1;
-    opacity: 0.5;
+        top: 0;
+        content: "";
+        position: absolute;
+        height: 600px;
+        width: 1000px;
+        background: linear-gradient(62.5deg, transparent, rgba(74, 196, 243, 0.06));
+        border-radius: 50px;
+        transform: rotate(45deg);
+        z-index: -1;
+        opacity: 0.5;
     }
 }
