--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -76,7 +76,7 @@
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
-  color: #EB2227;
+  color: #F39321;
   font-family: "Saira", sans-serif;
 }
 @media screen and (min-width: 992px) {
@@ -230,7 +230,7 @@
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
-  color: #EB2227;
+  color: #F39321;
   font-family: "Saira", sans-serif;
 }
 .home-services .service-top .title {
@@ -551,7 +551,7 @@
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
-  color: #EB2227;
+  color: #F39321;
   font-family: "Saira", sans-serif;
 }
 .home-about .content .title {
