--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -76,7 +76,7 @@
     .sub-title {
         margin-bottom: 15px;
         max-width: max-content;
-        color: $fourth-color;
+        color: $third-color;
         font-family: $font-family;
 
         @include min(992) {
@@ -233,7 +233,7 @@
         .sub-title {
             margin-bottom: 15px;
             max-width: max-content;
-            color: $fourth-color;
+            color: $third-color;
             font-family: $font-family;
         }
 
@@ -542,7 +542,7 @@
         .sub-title {
             margin-bottom: 15px;
             max-width: max-content;
-            color: $fourth-color;
+            color: $third-color;
             font-family: $font-family;
         }
 
