--- a/assets/scss/utilities/_variable.scss
+++ b/assets/scss/utilities/_variable.scss
@@ -19,8 +19,8 @@ $red: #C60C02 !default;
 
 // Font Family
 $font-family: "Saira", sans-serif;
-$ttl-family: "Kanit", sans-serif;
-$d-ico: 'deafult-icons' !default;
+$ttl-family:  "Roboto", sans-serif;
+
 //button
 $font-light:300;
 $font-regular:400;
