--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -59,11 +59,14 @@
             transform: translate(1rem, 0);
   }
 }
+.home-banner .content .btn-link {
+  margin-top: 20px;
+}
 
 .home-business-setup {
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color: #ecf6fa;
+  /*  IMPORTANT CODE BELOW */
 }
 @media screen and (min-width: 992px) {
   .home-business-setup {
@@ -76,8 +79,8 @@
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
-  color: #F39321;
-  font-family: "Saira", sans-serif;
+  color: #EB2227;
+  text-transform: uppercase;
 }
 @media screen and (min-width: 992px) {
   .home-business-setup .sub-title {
@@ -173,9 +176,15 @@
   }
 }
 .home-business-setup .flip-card-back {
-  background-color: #29B574;
+  background-color: #fff;
   color: #000;
-  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: left;
 }
 @media screen and (min-width: 992px) {
@@ -185,7 +194,7 @@
   }
 }
 .home-business-setup .flip-card-back .title {
-  color: #fff;
+  color: #000;
   margin: 0;
   margin-bottom: 5px;
   font-size: 20px;
@@ -199,7 +208,7 @@
 .home-business-setup .flip-card-back p {
   margin: 0;
   font-size: 14px;
-  color: #fff;
+  color: #000;
   text-align: left;
 }
 .home-business-setup .flip-card-back ul {
@@ -214,10 +223,95 @@
 .home-business-setup .flip-card-back ul li + li {
   margin-top: 15px;
 }
+.home-business-setup .flip-card-back a {
+  max-width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: auto;
+}
+.home-business-setup .slider {
+  height: 60px;
+  position: relative;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+.home-business-setup .slider::before,
+.home-business-setup .slider::after {
+  position: absolute;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgb(255, 255, 255)), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(to right, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+  content: "";
+  height: 100%;
+  width: 25%;
+  z-index: 2;
+  pointer-events: none;
+}
+.home-business-setup .slider::before {
+  left: 0;
+  top: 0;
+}
+.home-business-setup .slider::after {
+  right: 0;
+  top: 0;
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
+}
+.home-business-setup .slide-track {
+  width: 3000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-animation: scroll 20s linear infinite;
+          animation: scroll 20s linear infinite;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.home-business-setup .slide {
+  width: 150px;
+  height: 60px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.home-business-setup .slide:hover {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
 
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    -webkit-transform: translateX(-1500px);
+            transform: translateX(-1500px);
+  }
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    -webkit-transform: translateX(-1500px);
+            transform: translateX(-1500px);
+  }
+}
 .home-services {
   padding-top: 50px;
   padding-bottom: 50px;
+  position: relative;
+  z-index: 2;
 }
 @media screen and (min-width: 992px) {
   .home-services {
@@ -291,6 +385,7 @@
       flex-wrap: wrap;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0;
+  background-color: transparent;
 }
 @media screen and (min-width: 992px) {
   .home-services .service-list .card {
@@ -333,8 +428,10 @@
 .home-services .service-list .row {
   row-gap: 30px;
 }
-.home-services .service-list .row .col-lg-6:last-child .card {
-  border: none;
+@media screen and (max-width: 992px) {
+  .home-services .service-list .row .col-lg-6:last-child .card {
+    border: none;
+  }
 }
 .home-services .service-list .btn-primary {
   display: -webkit-box;
@@ -363,7 +460,17 @@
   padding-top: 50px;
   padding-bottom: 50px;
   background-color: #ecf6fa;
-  overflow: hidden;
+  position: relative;
+}
+.home-about::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 363px;
+  left: 0;
+  top: -363px;
+  background-image: url(/assets/images/shape.png);
+  background-size: cover;
 }
 @media screen and (min-width: 992px) {
   .home-about {
@@ -657,88 +764,37 @@
             transform: rotate(360deg);
   }
 }
-.home-contact-faq {
+.home-faq {
   padding-top: 50px;
   padding-bottom: 50px;
 }
 @media screen and (min-width: 992px) {
-  .home-contact-faq {
+  .home-faq {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
-@media screen and (min-width: 992px) {
-  .home-contact-faq .contact {
-    padding-right: 20px;
-  }
-}
-.home-contact-faq .contact .title {
-  color: #013346;
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
-  max-width: max-content;
-  margin-bottom: 20px;
-}
-@media screen and (min-width: 992px) {
-  .home-contact-faq .contact .title {
-    margin-bottom: 25px;
-  }
-}
-.home-contact-faq .contact p {
-  font-size: 18px;
-  margin-bottom: 0;
-}
-.home-contact-faq .contact ul {
-  padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0;
-  list-style-type: none;
-  margin: 30px 0 40px 0;
-  row-gap: 20px;
-}
-@media screen and (min-width: 992px) {
-  .home-contact-faq .contact ul {
-    max-width: 80%;
-    margin: 30px 0;
-  }
-}
-.home-contact-faq .contact ul li {
-  width: 50%;
-}
-@media screen and (max-width: 575px) {
-  .home-contact-faq .contact .btn-primary {
-    max-width: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .home-contact-faq .contact .btn-primary .arrow {
-    display: none;
-  }
-}
-.home-contact-faq .faq {
+.home-faq .faq {
   margin-top: 50px;
+  max-width: 80%;
+  margin: auto;
 }
 @media screen and (min-width: 992px) {
-  .home-contact-faq .faq {
+  .home-faq .faq {
     margin-top: 0;
   }
 }
-.home-contact-faq .faq .accordion-item {
+.home-faq .faq .accordion-item {
   border: none !important;
   margin-bottom: 15px;
 }
-.home-contact-faq .faq .accordion-item:last-child {
+.home-faq .faq .accordion-item:last-child {
   margin-bottom: 0;
 }
-.home-contact-faq .faq .accordion-header {
+.home-faq .faq .accordion-header {
   border: none !important;
 }
-.home-contact-faq .faq .accordion-button {
+.home-faq .faq .accordion-button {
   background-color: transparent;
   border: none;
   -webkit-box-shadow: none;
@@ -750,23 +806,45 @@
   background-color: #013346;
   color: #fff;
 }
-.home-contact-faq .faq .accordion-button.collapsed {
+.home-faq .faq .accordion-button.collapsed {
   background-color: #fff;
   color: #013346;
 }
-.home-contact-faq .faq .accordion-button.collapsed:after {
+.home-faq .faq .accordion-button.collapsed:after {
   background-image: url(/assets/images/arrow.svg);
   width: 15px;
   height: 9px;
   background-size: contain;
 }
-.home-contact-faq .faq .accordion-button:not(.collapsed)::after {
+.home-faq .faq .accordion-button:not(.collapsed)::after {
   fill: #fff;
   background-image: url(/assets/images/w-arrow.svg);
   width: 15px;
   height: 9px;
   background-size: contain;
 }
-.home-contact-faq .faq .accordion-body {
+.home-faq .faq .accordion-body {
   padding: 15px 5px 25px 5px;
+}
+
+.home-contact {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+@media screen and (min-width: 992px) {
+  .home-contact {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+.home-contact .title {
+  margin-bottom: 20px;
+}
+.home-contact p {
+  font-size: 18px;
+  margin-bottom: 40px;
+}
+.home-contact a {
+  margin: auto;
 }
