--- a/assets/scss/main.min.scss
+++ b/assets/scss/main.min.scss
@@ -13,6 +13,7 @@
 
 @import './components/header';
 @import './components/footer';
+@import "./components/modal";
 
 @import 'utilities/variable';
 @import 'utilities/buttons';
