--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -305,8 +305,8 @@
         .sub-title {
             margin-bottom: 15px;
             max-width: max-content;
-            color: $third-color;
-            font-family: $font-family;
+            color: $fourth-color;
+           text-transform: uppercase;
         }
 
         .title {
@@ -629,8 +629,8 @@
         .sub-title {
             margin-bottom: 15px;
             max-width: max-content;
-            color: $third-color;
-            font-family: $font-family;
+            color: $fourth-color;
+            text-transform: uppercase;
         }
 
         .title {
@@ -733,12 +733,23 @@
         padding-top: 100px;
         padding-bottom: 100px;
     }
+    .title {
+        color: $primary;
+        max-width: max-content;
+        margin: auto;
+        margin-bottom: 25px;
+
+        @include min(992) {
+            margin-bottom: 30px;
+        }
+    }
     .faq {
         margin-top: 50px;
-        max-width: 80%;
-        margin: auto;
+       
         @include min(992){
             margin-top: 0;
+            max-width: 80%;
+            margin: auto;
         }
         .accordion {
             &-item {
@@ -790,6 +801,10 @@
                 padding: 15px 5px 25px 5px;
             }
         }
+    }
+    a{
+        margin: auto;
+        margin-top: 30px;
     }
 }
 
